i18n 2.3.0 update Add TextReplacement (simple analog to kyori TagResolver) Add legacy text support