@@ -1,12 +1,15 @@
 package me.wyne.wutils.i18n.language;
 
 import me.clip.placeholderapi.PlaceholderAPI;
+import me.wyne.wutils.i18n.language.replacement.TextReplacement;
 import me.wyne.wutils.i18n.language.validation.StringValidator;
 import me.wyne.wutils.log.Log;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.minimessage.MiniMessage;
 import net.kyori.adventure.text.minimessage.tag.resolver.TagResolver;
+import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
 import org.apache.commons.io.FilenameUtils;
+import org.bukkit.ChatColor;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.configuration.file.YamlConfiguration;
@@ -17,6 +20,7 @@ import ru.vyarus.yaml.updater.report.UpdateReport;
 
 import java.io.File;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -64,19 +68,70 @@ public class Language {
         return languageCode;
     }
 
+    private String applyTextReplacements(String string, TextReplacement ...textReplacements)
+    {
+        Arrays.stream(textReplacements).forEach(textReplacement -> textReplacement.replace(string));
+        return string; 
+    }
+    
     public String getString(String path)
     {
         return stringValidator.validateString(languageCode, strings, path);
     }
 
+    public String getString(String path, TextReplacement... textReplacements)
+    {
+        return applyTextReplacements(getString(path), textReplacements);
+    }
+    
     public String getPlaceholderString(@Nullable Player player, String path)
     {
         return PlaceholderAPI.setPlaceholders(player, getString(path));
+    }
+    
+    public String getPlaceholderString(@Nullable Player player, String path, TextReplacement... textReplacements)
+    {
+        return applyTextReplacements(getPlaceholderString(player, path), textReplacements);
     }
 
     public String getPlaceholderString(@Nullable OfflinePlayer player, String path)
     {
         return PlaceholderAPI.setPlaceholders(player, getString(path));
+    }
+
+    public String getPlaceholderString(@Nullable OfflinePlayer player, String path, TextReplacement... textReplacements)
+    {
+        return applyTextReplacements(getPlaceholderString(player, path), textReplacements);
+    }
+
+    public String getLegacyString(String path)
+    {
+        return ChatColor.translateAlternateColorCodes('&', getString(path));
+    }
+    
+    public String getLegacyString(String path, TextReplacement ...textReplacements)
+    {
+        return applyTextReplacements(getLegacyString(path), textReplacements);
+    }
+
+    public String getLegacyPlaceholderString(@Nullable Player player, String path)
+    {
+        return PlaceholderAPI.setPlaceholders(player, getLegacyString(path));
+    }
+
+    public String getLegacyPlaceholderString(@Nullable Player player, String path, TextReplacement ...textReplacements)
+    {
+        return PlaceholderAPI.setPlaceholders(player, getLegacyString(path, textReplacements));
+    }
+
+    public String getLegacyPlaceholderString(@Nullable OfflinePlayer player, String path)
+    {
+        return PlaceholderAPI.setPlaceholders(player, getLegacyString(path));
+    }
+
+    public String getLegacyPlaceholderString(@Nullable OfflinePlayer player, String path, TextReplacement ...textReplacements)
+    {
+        return PlaceholderAPI.setPlaceholders(player, getLegacyString(path, textReplacements));
     }
 
     public Component getComponent(String path)
@@ -89,6 +144,11 @@ public class Language {
         return MiniMessage.miniMessage().deserialize(getString(path), tagResolvers);
     }
 
+    public Component getComponent(String path, TextReplacement ...textReplacements)
+    {
+        return MiniMessage.miniMessage().deserialize(getString(path, textReplacements));
+    }
+    
     public Component getPlaceholderComponent(@Nullable Player player, String path)
     {
         return MiniMessage.miniMessage().deserialize(getPlaceholderString(player, path));
@@ -97,6 +157,11 @@ public class Language {
     public Component getPlaceholderComponent(@Nullable Player player, String path, TagResolver ...tagResolvers)
     {
         return MiniMessage.miniMessage().deserialize(getPlaceholderString(player, path), tagResolvers);
+    }
+    
+    public Component getPlaceholderComponent(@Nullable Player player, String path, TextReplacement ...textReplacements)
+    {
+        return MiniMessage.miniMessage().deserialize(getPlaceholderString(player, path, textReplacements));
     }
 
     public Component getPlaceholderComponent(@Nullable OfflinePlayer player, String path)
@@ -108,66 +173,233 @@ public class Language {
     {
         return MiniMessage.miniMessage().deserialize(getPlaceholderString(player, path), tagResolvers);
     }
+    
+    public Component getPlaceholderComponent(@Nullable OfflinePlayer player, String path, TextReplacement ...textReplacements)
+    {
+        return MiniMessage.miniMessage().deserialize(getPlaceholderString(player, path, textReplacements));
+    }
+
+    public Component getLegacyComponent(String path)
+    {
+        return LegacyComponentSerializer.legacyAmpersand().deserialize(getString(path));
+    }
+
+    public Component getLegacyComponent(String path, TextReplacement ...textReplacements)
+    {
+        return LegacyComponentSerializer.legacyAmpersand().deserialize(getString(path, textReplacements));
+    }
+
+    public Component getLegacyPlaceholderComponent(@Nullable Player player, String path)
+    {
+        return LegacyComponentSerializer.legacyAmpersand().deserialize(getPlaceholderString(player, path));
+    }
+
+    public Component getLegacyPlaceholderComponent(@Nullable Player player, String path, TextReplacement ...textReplacements)
+    {
+        return LegacyComponentSerializer.legacyAmpersand().deserialize(getPlaceholderString(player, path, textReplacements));
+    }
+
+    public Component getLegacyPlaceholderComponent(@Nullable OfflinePlayer player, String path)
+    {
+        return LegacyComponentSerializer.legacyAmpersand().deserialize(getPlaceholderString(player, path));
+    }
+
+    public Component getLegacyPlaceholderComponent(@Nullable OfflinePlayer player, String path, TextReplacement ...textReplacements)
+    {
+        return LegacyComponentSerializer.legacyAmpersand().deserialize(getPlaceholderString(player, path, textReplacements));
+    } 
 
     public List<String> getStringList(String path)
     {
-        return strings.getStringList(path).stream().map(s -> stringValidator.validateString(languageCode, strings, s)).collect(Collectors.toCollection(ArrayList::new));
+        return strings.getStringList(path).stream()
+                .map(s -> stringValidator.validateString(languageCode, strings, s))
+                .collect(Collectors.toCollection(ArrayList::new));
+    }
+    
+    public List<String> getStringList(String path, TextReplacement ...textReplacements)
+    {
+        return strings.getStringList(path).stream()
+                .map(s -> stringValidator.validateString(languageCode, strings, s))
+                .map(s -> applyTextReplacements(s, textReplacements))
+                .collect(Collectors.toCollection(ArrayList::new));
     }
 
     public List<String> getPlaceholderStringList(@Nullable Player player, String path)
     {
         return getStringList(path).stream()
                 .map(s -> PlaceholderAPI.setPlaceholders(player, s))
-                .collect(Collectors.toList());
+                .toList();
+    }
+    
+    public List<String> getPlaceholderStringList(@Nullable Player player, String path, TextReplacement ...textReplacements)
+    {
+        return getStringList(path, textReplacements).stream()
+                .map(s -> PlaceholderAPI.setPlaceholders(player, s))
+                .toList();
     }
 
     public List<String> getPlaceholderStringList(@Nullable OfflinePlayer player, String path)
     {
         return getStringList(path).stream()
                 .map(s -> PlaceholderAPI.setPlaceholders(player, s))
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    public List<String> getPlaceholderStringList(@Nullable OfflinePlayer player, String path, TextReplacement ...textReplacements)
+    {
+        return getStringList(path, textReplacements).stream()
+                .map(s -> PlaceholderAPI.setPlaceholders(player, s))
+                .toList();
+    }
+
+    public List<String> getLegacyStringList(String path)
+    {
+        return strings.getStringList(path).stream()
+                .map(s -> stringValidator.validateString(languageCode, strings, s))
+                .map(s -> ChatColor.translateAlternateColorCodes('&', s))
+                .collect(Collectors.toCollection(ArrayList::new));
+    }
+
+    public List<String> getLegacyStringList(String path, TextReplacement ...textReplacements)
+    {
+        return strings.getStringList(path).stream()
+                .map(s -> stringValidator.validateString(languageCode, strings, s))
+                .map(s -> applyTextReplacements(s, textReplacements))
+                .map(s -> ChatColor.translateAlternateColorCodes('&', s))
+                .collect(Collectors.toCollection(ArrayList::new));
+    }
+
+    public List<String> getLegacyPlaceholderStringList(@Nullable Player player, String path)
+    {
+        return getLegacyStringList(path).stream()
+                .map(s -> PlaceholderAPI.setPlaceholders(player, s))
+                .toList();
+    }
+
+    public List<String> getLegacyPlaceholderStringList(@Nullable Player player, String path, TextReplacement ...textReplacements)
+    {
+        return getLegacyStringList(path, textReplacements).stream()
+                .map(s -> PlaceholderAPI.setPlaceholders(player, s))
+                .toList();
+    }
+
+    public List<String> getLegacyPlaceholderStringList(@Nullable OfflinePlayer player, String path)
+    {
+        return getLegacyStringList(path).stream()
+                .map(s -> PlaceholderAPI.setPlaceholders(player, s))
+                .toList();
+    }
+
+    public List<String> getLegacyPlaceholderStringList(@Nullable OfflinePlayer player, String path, TextReplacement ...textReplacements)
+    {
+        return getLegacyStringList(path, textReplacements).stream()
+                .map(s -> PlaceholderAPI.setPlaceholders(player, s))
+                .toList();
+    } 
 
     public List<Component> getComponentList(String path)
     {
         return getStringList(path).stream()
                 .map(s -> MiniMessage.miniMessage().deserialize(s))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Component> getComponentList(String path, TagResolver ...tagResolvers)
     {
         return getStringList(path).stream()
                 .map(s -> MiniMessage.miniMessage().deserialize(s, tagResolvers))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<Component> getComponentList(String path, TextReplacement ...textReplacements)
+    {
+        return getStringList(path, textReplacements).stream()
+                .map(s -> MiniMessage.miniMessage().deserialize(s))
+                .toList();
     }
 
     public List<Component> getPlaceholderComponentList(@Nullable Player player, String path)
     {
         return getPlaceholderStringList(player, path).stream()
                 .map(s -> MiniMessage.miniMessage().deserialize(s))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Component> getPlaceholderComponentList(@Nullable Player player, String path, TagResolver ...tagResolvers)
     {
         return getPlaceholderStringList(player, path).stream()
                 .map(s -> MiniMessage.miniMessage().deserialize(s, tagResolvers))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<Component> getPlaceholderComponentList(@Nullable Player player, String path, TextReplacement ...textReplacements)
+    {
+        return getPlaceholderStringList(player, path, textReplacements).stream()
+                .map(s -> MiniMessage.miniMessage().deserialize(s))
+                .toList();
     }
 
     public List<Component> getPlaceholderComponentList(@Nullable OfflinePlayer player, String path)
     {
         return getPlaceholderStringList(player, path).stream()
                 .map(s -> MiniMessage.miniMessage().deserialize(s))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Component> getPlaceholderComponentList(@Nullable OfflinePlayer player, String path, TagResolver ...tagResolvers)
     {
         return getPlaceholderStringList(player, path).stream()
                 .map(s -> MiniMessage.miniMessage().deserialize(s, tagResolvers))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<Component> getPlaceholderComponentList(@Nullable OfflinePlayer player, String path, TextReplacement ...textReplacements)
+    {
+        return getPlaceholderStringList(player, path, textReplacements).stream()
+                .map(s -> MiniMessage.miniMessage().deserialize(s))
+                .toList();
+    }
+
+    public List<Component> getLegacyComponentList(String path)
+    {
+        return getLegacyStringList(path).stream()
+                .map(s -> (Component)LegacyComponentSerializer.legacyAmpersand().deserialize(s))
+                .toList();
+    }
+
+    public List<Component> getLegacyComponentList(String path, TextReplacement ...textReplacements)
+    {
+        return getLegacyStringList(path, textReplacements).stream()
+                .map(s -> (Component)LegacyComponentSerializer.legacyAmpersand().deserialize(s))
+                .toList();
+    }
+
+    public List<Component> getLegacyPlaceholderComponentList(@Nullable Player player, String path)
+    {
+        return getLegacyPlaceholderStringList(player, path).stream()
+                .map(s -> (Component)LegacyComponentSerializer.legacyAmpersand().deserialize(s))
+                .toList();
+    }
+
+    public List<Component> getLegacyPlaceholderComponentList(@Nullable Player player, String path, TextReplacement ...textReplacements)
+    {
+        return getLegacyPlaceholderStringList(player, path, textReplacements).stream()
+                .map(s -> (Component)LegacyComponentSerializer.legacyAmpersand().deserialize(s))
+                .toList();
+    }
+
+    public List<Component> getLegacyPlaceholderComponentList(@Nullable OfflinePlayer player, String path)
+    {
+        return getLegacyPlaceholderStringList(player, path).stream()
+                .map(s -> (Component)LegacyComponentSerializer.legacyAmpersand().deserialize(s))
+                .toList();
+    }
+
+    public List<Component> getLegacyPlaceholderComponentList(@Nullable OfflinePlayer player, String path, TextReplacement ...textReplacements)
+    {
+        return getLegacyPlaceholderStringList(player, path, textReplacements).stream()
+                .map(s -> (Component)LegacyComponentSerializer.legacyAmpersand().deserialize(s))
+                .toList();
     }
 
 }
